Add page skeleton
Add basic page structure.
Add sidebar contents.

--- a/src/template.html
+++ b/src/template.html
@@ -8,5 +8,45 @@
 </head>
 <body>
 
+    <div id="sidebar">
+        <h1>Todo List</h1>
+
+        <div id="view-actions">
+            <h2>View options</h2>
+
+            <button type="button" id="view-projects">Projects</button>
+            <button type="button" id="view-stats">Statistics</button>
+        </div>
+
+        <div id="add-actions">
+            <h2>Add items</h2>
+
+            <button type="button" id="add-project">Add Project</button>
+            <button type="button" id="add-task">Add Task</button>
+            <button type="button" id="add-note">Add Note</button>
+        </div>
+
+    </div>
+
+    <div id="main">
+
+        <div id="projects-info">
+
+        </div>
+
+        <div id="projects-container">
+
+        </div>
+
+        <div id="projects-navigator">
+
+        </div>
+
+    </div>
+
+    <div id="info-panel">
+
+    </div>
+
 </body>
 </html>
