--- a/src/template.html
+++ b/src/template.html
@@ -12,14 +12,14 @@
         <h1>Todo List</h1>
 
         <div id="view-actions">
-            <h2>View options</h2>
+            <h3>View options</h3>
 
             <button type="button" id="view-projects">Projects</button>
             <button type="button" id="view-stats">Statistics</button>
         </div>
 
         <div id="add-actions">
-            <h2>Add items</h2>
+            <h3>Add items</h3>
 
             <button type="button" id="add-project">Add Project</button>
             <button type="button" id="add-task">Add Task</button>
@@ -28,21 +28,64 @@
 
     </div>
 
-    <div id="main">
+    <main>
 
         <div id="projects-info">
-
+            <h2>All Projects</h2>
         </div>
 
         <div id="projects-container">
 
         </div>
 
-        <div id="projects-navigator">
+        <div id="project-navigator">
+            <div id="pager">
+                <div id="item-summary">
+                    <p>Items in total: <span id="total-items">1</span></p>
+                </div>
 
+                <div id="pager-controls">
+                    <button type="button" id="btn-prev"><</button>
+                    <span id="curr-page">1</span>
+                    <button type="button" id="btn-next">></button>
+                </div>
+            </div>
+
+            <fieldset>
+                <legend>Select project items to display:</legend>
+                <div>
+                    <input type="radio" id="display-tasks" name="display-mode" value="tasks" checked />
+                    <label for="display-tasks">Tasks</label>
+                    <input type="radio" id="display-notes" name="display-mode" value="notes" />
+                    <label for="display-notes">Notes</label>
+                </div>
+            </fieldset>
+
+            <div id="tasks-sorter">
+
+                <fieldset>
+                    <legend>Sort by:</legend>
+                    <div>
+                        <input type="radio" id="sort-by-none" name="sorting-mode" value="none" checked />
+                        <label for="sort-by-none">None</label>
+                        <input type="radio" id="sort-by-priority" name="sorting-mode" value="priority" />
+                        <label for="sort-by-priority">Priority</label>
+                        <input type="radio" id="sort-by-date" name="sorting-mode" value="date" />
+                        <label for="sort-by-date">Date</label>
+                        <input type="radio" id="sort-by-status" name="sorting-mode" value="status" />
+                        <label for="sort-by-status">Status</label>
+                    </div>
+
+                    <div>
+                        <input type="checkbox" id="ordering" checked />
+                        <label for="ordering">Ascending order</label>
+                    </div>
+                </fieldset>
+
+            </div>
         </div>
 
-    </div>
+    </main>
 
     <div id="info-panel">
 
