Implement opening projects
Create generic function for displaying cards to avoid code duplication.
Implement opening projects and switching back to all projects.

--- a/src/template.html
+++ b/src/template.html
@@ -39,6 +39,8 @@
         </div>
 
         <div id="project-navigator">
+            <button type="button" id="btn-back" disabled>Back</button>
+
             <div id="pager">
                 <div id="item-summary">
                     <p>Items in total: <span id="total-items">1</span></p>
