--- a/src/template.html
+++ b/src/template.html
@@ -9,11 +9,44 @@
 <body>
 
     <dialog id="add-project-window">
+        <h3>Add Project</h3>
         <form method="dialog">
             <p>Required fields are followed by <strong><span aria-label="required">*</span></strong>.</p>
 
-            <label for="title">Title<strong><span aria-label="required">*</span></strong></label>
-            <input type="text" name="title" id="title" autofocus maxlength="20" required>
+            <label for="project-title-field">Title<strong><span aria-label="required">*</span></strong></label>
+            <input type="text" name="title" id="project-title-field" autofocus maxlength="20" required>
+
+            <div>
+                <button type="button" formnovalidate>Cancel</button>
+                <button type="submit">Confirm</button>
+            </div>
+        </form>
+    </dialog>
+
+    <dialog id="add-task-window">
+        <h3>Add Task</h3>
+        <form method="dialog">
+            <p>Required fields are followed by <strong><span aria-label="required">*</span></strong>.</p>
+
+            <label for="task-title-field">Title<strong><span aria-label="required">*</span></strong></label>
+            <input type="text" name="title" id="task-title-field" autofocus maxlength="20" required>
+
+            <label for="task-description-field">Description<strong><span aria-label="required">*</span></strong></label>
+            <textarea name="description" id="task-description-field" rows="5" cols="33" maxlength="50" required></textarea>
+
+            <label for="task-date-field">Due Date<strong><span aria-label="required">*</span></strong></label>
+            <input type="date" name="date" id="task-date-field" required>
+
+            <label for="task-priority-field">Priority<strong><span aria-label="required">*</span></strong></label>
+            <select name="priority" id="task-priority-field" required>
+                <option value="Low" selected>Low</option>
+                <option value="Medium">Medium</option>
+                <option value="High">High</option>
+                <option value="Urgent">Urgent</option>
+            </select>
+
+            <label for="task-track-field">Trackable</label>
+            <input type="checkbox" name="track" id="task-track-field" checked>
 
             <div>
                 <button type="button" formnovalidate>Cancel</button>
