--- a/src/template.html
+++ b/src/template.html
@@ -28,6 +28,10 @@
         <form method="dialog">
             <p>Required fields are followed by <strong><span aria-label="required">*</span></strong>.</p>
 
+            <label for="task-project-list">Project<strong><span aria-label="required">*</span></strong></label>
+            <input list="available-projects" id="task-project-list" name="task-project-choice" required>
+            <datalist id="available-projects"></datalist>
+
             <label for="task-title-field">Title<strong><span aria-label="required">*</span></strong></label>
             <input type="text" name="title" id="task-title-field" autofocus maxlength="20" required>
 
