Handle displaying notes
Provide functionality in contentDisplayController module.
Implement generating and displaying notes.
Enabling switching between notes and tasks in a given project.
Update UI on note created event.

--- a/src/template.html
+++ b/src/template.html
@@ -127,9 +127,9 @@
             <fieldset id="items-options">
                 <legend>Select project items to display:</legend>
                 <div>
-                    <input type="radio" id="display-tasks" name="display-mode" value="tasks" checked />
+                    <input type="radio" id="display-tasks" name="display-mode" value="View Tasks" checked />
                     <label for="display-tasks">Tasks</label>
-                    <input type="radio" id="display-notes" name="display-mode" value="notes" />
+                    <input type="radio" id="display-notes" name="display-mode" value="View Notes" />
                     <label for="display-notes">Notes</label>
                 </div>
             </fieldset>
