Enable viewing tasks in a sorted manner
Provide functionality in contentDisplayModule.
Display tasks based on chosen sorting options.

--- a/src/template.html
+++ b/src/template.html
@@ -139,19 +139,19 @@
                 <fieldset id="sorting-options">
                     <legend>Sort tasks by:</legend>
                     <div>
-                        <input type="radio" id="sort-by-none" name="sorting-mode" value="none" checked />
+                        <input type="radio" id="sort-by-none" name="sorting-mode" value="None" checked />
                         <label for="sort-by-none">None</label>
-                        <input type="radio" id="sort-by-priority" name="sorting-mode" value="priority" />
+                        <input type="radio" id="sort-by-priority" name="sorting-mode" value="Priority" />
                         <label for="sort-by-priority">Priority</label>
-                        <input type="radio" id="sort-by-date" name="sorting-mode" value="date" />
+                        <input type="radio" id="sort-by-date" name="sorting-mode" value="Date" />
                         <label for="sort-by-date">Due Date</label>
-                        <input type="radio" id="sort-by-status" name="sorting-mode" value="status" />
+                        <input type="radio" id="sort-by-status" name="sorting-mode" value="Status" />
                         <label for="sort-by-status">Status</label>
                     </div>
 
                     <div>
-                        <input type="checkbox" id="ordering" checked />
-                        <label for="ordering">Ascending order</label>
+                        <input type="checkbox" id="tasks-ordering" checked />
+                        <label for="tasks-ordering">Ascending order</label>
                     </div>
                 </fieldset>
 
