Enable displaying filtered tasks
Provide functionality in contentDisplayController module.
Display tasks based on filtering chosoen by the user.

--- a/src/template.html
+++ b/src/template.html
@@ -158,8 +158,8 @@
                 <fieldset id="filtering-options">
                     <legend>Filter tasks by:</legend>
                     <div>
-                        <input type="checkbox" id="filter-overdue" />
-                        <label for="filter-overdue">Only overdue</label>
+                        <input type="checkbox" id="tasks-filtering" />
+                        <label for="tasks-filtering">Only overdue</label>
                     </div>
                 </fieldset>
 
