Add delete project dialog
Define html structure for delete project window.

--- a/src/template.html
+++ b/src/template.html
@@ -79,6 +79,19 @@
         </form>
     </dialog>
 
+    <dialog id="delete-project-window">
+        <h3>Delete Project</h3>
+
+        <p id="delete-project-name"></p>
+
+        <p>Are you sure you want to delete this project ?</p>
+
+        <div>
+            <button type="button" id="btn-cancel-project-deletion">Cancel</button>
+            <button type="button" id="btn-confirm-project-deletion">Confirm</button>
+        </div>
+    </dialog>
+
     <div id="sidebar">
         <h1>Todo List</h1>
 
