--- a/src/template.html
+++ b/src/template.html
@@ -92,6 +92,19 @@
         </div>
     </dialog>
 
+    <dialog id="delete-task-window">
+        <h3>Delete Task</h3>
+
+        <p id="delete-task-name"></p>
+
+        <p>Are you sure you want to delete this task ?</p>
+
+        <div>
+            <button type="button" id="btn-cancel-task-deletion">Cancel</button>
+            <button type="button" id="btn-confirm-task-deletion">Confirm</button>
+        </div>
+    </dialog>
+
     <div id="sidebar">
         <h1>Todo List</h1>
 
