Add delete note dialog
Define html structure for note deletion window.

--- a/src/template.html
+++ b/src/template.html
@@ -105,6 +105,19 @@
         </div>
     </dialog>
 
+    <dialog id="delete-note-window">
+        <h3>Delete Note</h3>
+
+        <p id="delete-note-name"></p>
+
+        <p>Are you sure you want to delete this note ?</p>
+
+        <div>
+            <button type="button" id="btn-cancel-note-deletion">Cancel</button>
+            <button type="button" id="btn-confirm-note-deletion">Confirm</button>
+        </div>
+    </dialog>
+
     <div id="sidebar">
         <h1>Todo List</h1>
 
