Implement viewing task details
Define html structure for the dialog window.
Publish request in contentDisplayController.
React and handle request in contentViewController.

--- a/src/template.html
+++ b/src/template.html
@@ -172,6 +172,17 @@
         </form>
     </dialog>
 
+    <dialog id="view-task-window">
+        <h3>Title: <span id="view-task-title"></span></h3>
+
+        <p>Description: <span id="view-task-description"></span></p>
+        <p>Due date: <span id="view-task-date"></span></p>
+        <p>Priority: <span id="view-task-priority"></span></p>
+        <p>Trackable: <span id="view-task-track"></span></p>
+
+        <button type="button" id="btn-close-task-view">Close</button>
+    </dialog>
+
     <div id="sidebar">
         <h1>Todo List</h1>
 
