Implement viewing notes
Define html structure for the dialog window.
Publish request in contentDisplayController.
React and handle request in contentViewController.

This funcionality will enable seeing whole note content
that wouldn't fit on the card representation.

--- a/src/template.html
+++ b/src/template.html
@@ -183,6 +183,14 @@
         <button type="button" id="btn-close-task-view">Close</button>
     </dialog>
 
+    <dialog id="view-note-window">
+        <h3>Title: <span id="view-note-title"></span></h3>
+
+        <p>Content: <span id="view-note-content"></span></p>
+
+        <button type="button" id="btn-close-note-view">Close</button>
+    </dialog>
+
     <div id="sidebar">
         <h1>Todo List</h1>
 
