Let user pick items per page
Create html select structure in the pager part.
Provide functionality in contentDisplayController.

--- a/src/template.html
+++ b/src/template.html
@@ -229,6 +229,16 @@
                     <p>Items in total: <span id="total-items">1</span></p>
                 </div>
 
+                <div>
+                    <label for="items-select">Items per page: </label>
+                    <select name="items-on-page" id="items-select">
+                        <option value="1">1</option>
+                        <option value="5" selected>5</option>
+                        <option value="10">10</option>
+                        <option value="15">15</option>
+                    </select>
+                </div>
+
                 <div id="pager-controls">
                     <button type="button" id="btn-prev"><</button>
                     <span id="curr-page">1</span>
