--- a/src/template.html
+++ b/src/template.html
@@ -194,19 +194,14 @@
     <div id="sidebar">
         <h1>Todo List</h1>
 
-        <div id="view-actions">
-            <h3>View options</h3>
-
-            <button type="button" id="view-projects">Projects</button>
-            <button type="button" id="view-stats">Statistics</button>
-        </div>
-
         <div id="add-actions">
             <h3>Add items</h3>
 
-            <button type="button" id="add-project">Add Project</button>
-            <button type="button" id="add-task">Add Task</button>
-            <button type="button" id="add-note">Add Note</button>
+            <div>
+                <button type="button" id="add-project">Add Project</button>
+                <button type="button" id="add-task">Add Task</button>
+                <button type="button" id="add-note">Add Note</button>
+            </div>
         </div>
 
     </div>
