Style projects info section
Add styles to project info div.
Move shared styles to a new css class.

--- a/src/template.html
+++ b/src/template.html
@@ -191,7 +191,7 @@
         <button type="button" id="btn-close-note-view">Close</button>
     </dialog>
 
-    <div id="sidebar">
+    <div id="sidebar" class="basic-section">
         <h1>Todo List</h1>
 
         <div id="add-actions">
@@ -208,7 +208,7 @@
 
     <main>
 
-        <div id="projects-info">
+        <div id="projects-info" class="basic-section">
             <h2>All Projects</h2>
         </div>
 
