--- a/src/template.html
+++ b/src/template.html
@@ -212,7 +212,7 @@
             <h2>All Projects</h2>
         </div>
 
-        <div id="projects-container">
+        <div id="projects-container" class="projects">
 
         </div>
 
