--- a/src/template.html
+++ b/src/template.html
@@ -100,41 +100,41 @@
     </dialog>
 
     <dialog id="delete-project-window">
-        <h3>Delete Project</h3>
+        <h3 class="delete">Delete Project</h3>
 
         <p id="delete-project-name"></p>
 
         <p>Are you sure you want to delete this project ?</p>
 
         <div>
-            <button type="button" id="btn-cancel-project-deletion">Cancel</button>
-            <button type="button" id="btn-confirm-project-deletion">Confirm</button>
+            <button type="button" id="btn-cancel-project-deletion" class="basic-btn">Cancel</button>
+            <button type="button" id="btn-confirm-project-deletion" class="basic-btn">Confirm</button>
         </div>
     </dialog>
 
     <dialog id="delete-task-window">
-        <h3>Delete Task</h3>
+        <h3 class="delete">Delete Task</h3>
 
         <p id="delete-task-name"></p>
 
         <p>Are you sure you want to delete this task ?</p>
 
         <div>
-            <button type="button" id="btn-cancel-task-deletion">Cancel</button>
-            <button type="button" id="btn-confirm-task-deletion">Confirm</button>
+            <button type="button" id="btn-cancel-task-deletion" class="basic-btn">Cancel</button>
+            <button type="button" id="btn-confirm-task-deletion" class="basic-btn">Confirm</button>
         </div>
     </dialog>
 
     <dialog id="delete-note-window">
-        <h3>Delete Note</h3>
+        <h3 class="delete">Delete Note</h3>
 
         <p id="delete-note-name"></p>
 
         <p>Are you sure you want to delete this note ?</p>
 
         <div>
-            <button type="button" id="btn-cancel-note-deletion">Cancel</button>
-            <button type="button" id="btn-confirm-note-deletion">Confirm</button>
+            <button type="button" id="btn-cancel-note-deletion" class="basic-btn">Cancel</button>
+            <button type="button" id="btn-confirm-note-deletion" class="basic-btn">Confirm</button>
         </div>
     </dialog>
 
