Style edit windows
Adjst dialogs html to make use of shared styles.

--- a/src/template.html
+++ b/src/template.html
@@ -139,55 +139,69 @@
     </dialog>
 
     <dialog id="edit-task-window">
-        <h3>Edit Task</h3>
+        <h3 class="edit">Edit Task</h3>
         <p>Project: <span id="edit-task-project-name"></span></p>
 
         <form method="dialog">
             <p>Required fields are followed by <strong><span aria-label="required">*</span></strong>.</p>
 
-            <label for="edit-task-title-field">Title<strong><span aria-label="required">*</span></strong></label>
-            <input type="text" name="title" id="edit-task-title-field" autofocus maxlength="20" required>
+            <p>
+                <label for="edit-task-title-field">Title<strong><span aria-label="required">*</span></strong></label>
+                <input type="text" name="title" id="edit-task-title-field" autofocus maxlength="20" required>
+            </p>
 
-            <label for="edit-task-description-field">Description<strong><span aria-label="required">*</span></strong></label>
-            <textarea name="description" id="edit-task-description-field" rows="5" cols="33" maxlength="50" required></textarea>
+            <p>
+                <label for="edit-task-description-field">Description<strong><span aria-label="required">*</span></strong></label>
+                <textarea name="description" id="edit-task-description-field" rows="5" cols="33" maxlength="50" required></textarea>
+            </p>
 
-            <label for="edit-task-date-field">Due Date<strong><span aria-label="required">*</span></strong></label>
-            <input type="date" name="date" id="edit-task-date-field" required>
+            <p>
+                <label for="edit-task-date-field">Due Date<strong><span aria-label="required">*</span></strong></label>
+                <input type="date" name="date" id="edit-task-date-field" required>
+            </p>
 
-            <label for="edit-task-priority-field">Priority<strong><span aria-label="required">*</span></strong></label>
-            <select name="priority" id="edit-task-priority-field" required>
-                <option value="Low">Low</option>
-                <option value="Medium">Medium</option>
-                <option value="High">High</option>
-                <option value="Urgent">Urgent</option>
-            </select>
+            <p>
+                <label for="edit-task-priority-field">Priority<strong><span aria-label="required">*</span></strong></label>
+                <select name="priority" id="edit-task-priority-field" required>
+                    <option value="Low">Low</option>
+                    <option value="Medium">Medium</option>
+                    <option value="High">High</option>
+                    <option value="Urgent">Urgent</option>
+                </select>
+            </p>
 
-            <label for="edit-task-track-field">Trackable</label>
-            <input type="checkbox" name="track" id="edit-task-track-field" checked>
+            <p>
+                <label for="edit-task-track-field">Trackable</label>
+                <input type="checkbox" name="track" id="edit-task-track-field" checked>
+            </p>
 
             <div>
-                <button type="button" id="btn-cancel-task-edit" formnovalidate>Cancel</button>
-                <button type="submit">Confirm</button>
+                <button type="button" id="btn-cancel-task-edit" class="basic-btn" formnovalidate>Cancel</button>
+                <button type="submit" class="basic-btn">Confirm</button>
             </div>
         </form>
     </dialog>
 
     <dialog id="edit-note-window">
-        <h3>Edit Note</h3>
+        <h3 class="edit">Edit Note</h3>
         <p>Project: <span id="edit-note-project-name"></span></p>
 
         <form method="dialog">
             <p>Required fields are followed by <strong><span aria-label="required">*</span></strong>.</p>
 
-            <label for="edit-note-title-field">Title<strong><span aria-label="required">*</span></strong></label>
-            <input type="text" name="title" id="edit-note-title-field" autofocus maxlength="20" required>
+            <p>
+                <label for="edit-note-title-field">Title<strong><span aria-label="required">*</span></strong></label>
+                <input type="text" name="title" id="edit-note-title-field" autofocus maxlength="20" required>
+            </p>
 
-            <label for="edit-note-description-field">Description<strong><span aria-label="required">*</span></strong></label>
-            <textarea name="description" id="edit-note-description-field" rows="5" cols="33" maxlength="70" required></textarea>
+            <p>
+                <label for="edit-note-description-field">Description<strong><span aria-label="required">*</span></strong></label>
+                <textarea name="description" id="edit-note-description-field" rows="5" cols="33" maxlength="70" required></textarea>
+            </p>
 
             <div>
-                <button type="button" id="btn-cancel-note-edit" formnovalidate>Cancel</button>
-                <button type="submit" id="btn-confirm-note-edit">Confirm</button>
+                <button type="button" id="btn-cancel-note-edit" class="basic-btn" formnovalidate>Cancel</button>
+                <button type="submit" id="btn-confirm-note-edit" class="basic-btn">Confirm</button>
             </div>
         </form>
     </dialog>
