Make delete windows more clear
Show user what they are trying to delete more clearly.

--- a/src/template.html
+++ b/src/template.html
@@ -102,7 +102,7 @@
     <dialog id="delete-project-window">
         <h3 class="delete">Delete Project</h3>
 
-        <p id="delete-project-name"></p>
+        <p>Project: <em><span id="delete-project-name"></span></em></p>
 
         <p>Are you sure you want to delete this project ?</p>
 
@@ -115,7 +115,7 @@
     <dialog id="delete-task-window">
         <h3 class="delete">Delete Task</h3>
 
-        <p id="delete-task-name"></p>
+        <p>Task: <em><span id="delete-task-name"></span></em></p>
 
         <p>Are you sure you want to delete this task ?</p>
 
@@ -128,7 +128,7 @@
     <dialog id="delete-note-window">
         <h3 class="delete">Delete Note</h3>
 
-        <p id="delete-note-name"></p>
+        <p>Note: <em><span id="delete-note-name"></span></em></p>
 
         <p>Are you sure you want to delete this note ?</p>
 
