Style view windows

--- a/src/template.html
+++ b/src/template.html
@@ -206,7 +206,7 @@
         </form>
     </dialog>
 
-    <dialog id="view-task-window">
+    <dialog id="view-task-window" class="view-window">
         <h3>Title: <span id="view-task-title"></span></h3>
 
         <p>Description: <span id="view-task-description"></span></p>
@@ -214,15 +214,15 @@
         <p>Priority: <span id="view-task-priority"></span></p>
         <p>Trackable: <span id="view-task-track"></span></p>
 
-        <button type="button" id="btn-close-task-view">Close</button>
+        <button type="button" id="btn-close-task-view" class="basic-btn">Close</button>
     </dialog>
 
-    <dialog id="view-note-window">
+    <dialog id="view-note-window" class="view-window">
         <h3>Title: <span id="view-note-title"></span></h3>
 
-        <p>Content: <span id="view-note-content"></span></p>
+        <p class="content">Content: <span id="view-note-content"></span></p>
 
-        <button type="button" id="btn-close-note-view">Close</button>
+        <button type="button" id="btn-close-note-view" class="basic-btn">Close</button>
     </dialog>
 
     <div id="sidebar" class="basic-section">
