Style options panels
Style sorting, filtering, and items options panels.

--- a/src/template.html
+++ b/src/template.html
@@ -254,7 +254,7 @@
             <div>
                 <button type="button" id="btn-back" class="basic-btn" disabled>Back</button>
 
-                <fieldset id="items-options">
+                <fieldset id="items-options" class="basic-section options">
                     <legend>Select project items to display:</legend>
                     <div>
                         <input type="radio" id="display-tasks" name="display-mode" value="View Tasks" checked />
@@ -291,7 +291,7 @@
 
     </main>
 
-    <div id="tasks-sorter">
+    <div id="tasks-sorter" class="basic-section options">
 
         <fieldset id="sorting-options">
             <legend>Sort tasks by:</legend>
